src/Sdl3Sharp.ImGui/Native/ImDrawList.cs


    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimUnreserve")]
    public static partial void PrimUnreserve(ImDrawList* self, int idx_count, int vtx_count);

    /// <summary>
    /// Axis aligned rectangle (composed of two triangles)
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimRect")]
    public static partial void PrimRect(ImDrawList* self, ImVec2 a, ImVec2 b, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimRectUV")]
    public static partial void PrimRectUV(ImDrawList* self, ImVec2 a, ImVec2 b, ImVec2 uv_a, ImVec2 uv_b, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimQuadUV")]
    public static partial void PrimQuadUV(ImDrawList* self, ImVec2 a, ImVec2 b, ImVec2 c, ImVec2 d, ImVec2 uv_a, ImVec2 uv_b, ImVec2 uv_c, ImVec2 uv_d, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimWriteVtx")]
    public static partial void PrimWriteVtx(ImDrawList* self, ImVec2 pos, ImVec2 uv, uint col);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimWriteIdx")]
    public static partial void PrimWriteIdx(ImDrawList* self, ImDrawIdx idx);

    /// <summary>
    /// Write vertex with unique index
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList_PrimVtx")]
    public static partial void PrimVtx(ImDrawList* self, ImVec2 pos, ImVec2 uv, uint col);

    /// <summary>
    /// [Internal helpers]
    /// </summary>
    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__SetDrawListSharedData")]
    public static partial void _SetDrawListSharedData(ImDrawList* self, ImDrawListSharedData* data);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__ResetForNewFrame")]
    public static partial void _ResetForNewFrame(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__ClearFreeMemory")]
    public static partial void _ClearFreeMemory(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__PopUnusedDrawCmd")]
    public static partial void _PopUnusedDrawCmd(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__TryMergeDrawCmds")]
    public static partial void _TryMergeDrawCmds(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__OnChangedClipRect")]
    public static partial void _OnChangedClipRect(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__OnChangedTexture")]
    public static partial void _OnChangedTexture(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__OnChangedVtxOffset")]
    public static partial void _OnChangedVtxOffset(ImDrawList* self);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__SetTexture")]
    public static partial void _SetTexture(ImDrawList* self, ImTextureRef tex_ref);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__CalcCircleAutoSegmentCount")]
    public static partial int _CalcCircleAutoSegmentCount(ImDrawList* self, float radius);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__PathArcToFastEx")]
    public static partial void _PathArcToFastEx(ImDrawList* self, ImVec2 center, float radius, int a_min_sample, int a_max_sample, int a_step);

    [LibraryImport(Common.ImGuiNative, EntryPoint = "ImDrawList__PathArcToN")]
    public static partial void _PathArcToN(ImDrawList* self, ImVec2 center, float radius, float a_min, float a_max, int num_segments);

}
